@@ -84,6 +84,7 @@ dpkg (1.17.0) UNRELEASED; urgency=low
     packages with versions lesser than 0-0 (like 0~0-0). Closes: #676664
   * Fix Dpkg::Control::Hash set_options() to take a hash as argument instead
     of two scalars.
+  * Add a new Dpkg::Vendor get_vendor_dir() function.
 
   [ Updated manpages translations ]
   * Fix incorrect translation of "fortify" in French manpage for dpkg-buildflags
